[package]
name = "my_data"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic_operations"
path = "example/basic_operations.rs"

[dependencies]
parking_lot = "0.12.3"
log = "0.4.22"
env_logger = "0.11.6"
thiserror = "2.0.11"
bytes = "1.9.0"
prost = "0.13.4"
crc32fast = "1.4.2"
anyhow = "1.0.95"
