[package]
name = "http"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
my_data = {path = "../../my_data"}
tower-http = { version = "0.6.2", features = ["timeout","trace"] }
